[package]
name = "overloadf"
version = "0.1.7"
authors = ["zenix <zenixls2@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zenixls2/overloadf"
homepage = "https://github.com/zenixls2/overloadf"
documentation = "https://docs.rs/overloadf/"
description = "unlock function overloading for rust"
keywords = ["function", "overload", "overloadable", "no_std"]
changelog = "CHANGELOG.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
overloadf_derive = { path = "overloadf_derive", version = "0.1.7" }

[badges]
travis-ci = { repository = "zenixls2/overloadf" }

[dev-dependencies]
futures = "0.3.5"

[package.metadata.doc.rs]
all-features = true
