[package]
name = "overloadf_derive"
version = "0.1.7"
authors = ["zenix <hansheng.huang@sbibits.com>"]
edition = "2018"
repository = "https://github.com/zenixls2/overloadf"
homepage = "https://github.com/zenixls2/overloadf"
documentation = "https://docs.rs/overloadf/"
keywords = ["function", "overload", "overloadable", "no_std"]
description = "unlock function overloading for rust"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.25", features = ["full", "extra-traits"] }
quote = "1.0.6"
lazy_static = "1.4.0"
proc-macro2 = "1.0.17"
