[package]
name = "overloadf_derive"
version = "0.1.8"
authors = ["zenix <hansheng.huang@sbibits.com>"]
edition = "2018"
repository = "https://github.com/zenixls2/overloadf"
homepage = "https://github.com/zenixls2/overloadf"
documentation = "https://docs.rs/overloadf/"
keywords = ["function", "overload", "overloadable", "no_std"]
description = "unlock function overloading for rust"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.17"
